# stpt_registration

./: README.md
lims2_modules/common/register/: CMakeLists.txt
lims2_modules/common/register/Common/: idpDecomposeAffineMatrix2D.cxx  idpDecomposeAffineMatrix2D.h  idpDecomposeAffineMatrix3D.cxx  idpDecomposeAffineMatrix3D.h  idpImageSeries.cxx  idpImageSeries.h  idpImageSeriesUtilities.h  idpImageSeriesUtilities.txx  idpReferenceSpaceUtilities.cxx  idpReferenceSpaceUtilities.h  idpRegistrationUtilities.cxx  idpRegistrationUtilities.h  idpRegistrationUtilities.txx  idpStructure.cxx  idpStructure.h  idpTransformUtilities.cxx  idpTransformUtilities.h  idpXMLUtilities.h  itkChangePixelSpacingImageFilter.h  itkChangePixelSpacingImageFilter.txx  itkRGBToCombinedIntegerPixelAccessor.h  itkRGBToGrayscalePixelAccessor.h  itkSliceImageConstIterator.h  itkSliceImageConstIterator.txx
lims2_modules/common/register/Registration/: CMakeLists.txt  idpAffineCorrelationVolumeRegistration.h  idpAffineCorrelationVolumeRegistration.txx  idpMutualInfoCenteredAffineRegularGradientDescentRegistration.h  idpMutualInfoCenteredAffineRegularGradientDescentRegistration.txx  idpMutualInfoVersorRigidVolumeRegistration.h  idpMutualInfoVersorRigidVolumeRegistration.txx  idpProjectionAlignmentDispatcher.h  idpProjectionAlignmentDispatcher.txx  idpProjectionAlignmentModule.cxx  idpProjectionLocalAlignmentDispatcher.h  idpProjectionLocalAlignmentDispatcher.txx  idpProjectionLocalAlignmentModule.cxx  idpProjectionResampleVolumeModule.cxx  idpProjectionResampleVolumeRGBModule.cxx  idpRegistrationDispatcher.h  idpRegistrationDispatcher.txx  idpResampleVolumeModule.cxx  itkAffineCorrelationGradientDescentRegistration.h  itkAffineCorrelationGradientDescentRegistration.txx  itkAffineCorrelationGradientDescentRegistrationXML.h  itkAffineCorrelationGradientDescentRegistrationXML.txx  itkDisplacementFieldCompositionFilter.h  itkDisplacementFieldCompositionFilter.txx  itkIterativeImageRegistrationMethod.h  itkIterativeImageRegistrationMethod.txx  itkRegistrationImageCoordinator.h  itkRigid2DCorrelationGradientDescentRegistration.h  itkRigid2DCorrelationGradientDescentRegistration.txx  itkRigid2DCorrelationGradientDescentRegistrationXML.h  itkRigid2DCorrelationGradientDescentRegistrationXML.txx  itkScaledDerivativeImageToImageMetricAdaptor.h  itkScaledDerivativeImageToImageMetricAdaptor.txx  itkSimpleRegistrationImageCoordinator.h  itkSimpleRegistrationImageCoordinator.txx  itkSimpleRegistrationImageCoordinatorXML.h  itkSimpleRegistrationImageCoordinatorXML.txx
lims2_modules/common/register/Utilities/: AffineCorrelation2DRegistration.cxx  BackwardWarpImage.cxx  CMakeLists.txt  ChangePixelSpacing.cxx  ComposeAffineTransform.cxx  ConvertToNonCenteredAffineTransform.cxx  Create2DMappingTable.cxx  CreateBlankRGBImage.cxx  CreateBlankVolume.cxx  CropImage.cxx  CropVolume.cxx  DownsampleImage.cxx  ExtractRGBChannel.cxx  FlipFlopBoundingBox.cxx  ForwardWarpImage.cxx  ImageCentroid.cxx  ImageReadImageSeriesWrite.cxx  ImageReadWrite8Tiers.cxx  ImageSeriesReadWrite.cxx  InsertMaskedRGBImage.cxx  InsertRGBImage.cxx  IntensityWindowingRGBImage.cxx  Interpolate3DMaps.cxx  InverseAffineTransform.cxx  OverlayRGBImage.cxx  OverwriteImage.cxx  RGBToCombinedIntegerImage.cxx  ReduceRGBJP2Image.cxx  ResampleImage.cxx  ShiftScaleRGBImage.cxx  ValidatePolygonMapping.cxx
lims2_modules/lib/ITKJP2Lib/: CMakeLists.txt  ConvertVaa3dRaw.cxx  ImageReadWrite.cxx  ReduceRGBJP2Image.cxx  UseITKJP2.cmake.in  itkExtendedImageIOFactory.cxx  itkExtendedImageIOFactory.h  itkJP2ImageIO.cxx  itkJP2ImageIO.h  itkJP2ImageIOFactory.cxx  itkJP2ImageIOFactory.h  itkVaa3dRawImageIO.cxx  itkVaa3dRawImageIO.h  itkVaa3dRawImageIOFactory.cxx  itkVaa3dRawImageIOFactory.h
